# Mobile

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.cn.md  README.md
.travis/: pre_commit.sh
Demo/Android/AICamera/: README.md
Demo/Android/AICamera/app/: CMakeLists.txt  FindPaddle.cmake  build.gradle
Demo/Android/AICamera/app/paddle-android/: PUT_PADDLE_LIB_HERE.txt
Demo/Android/AICamera/app/paddle-android/include/paddle/: config.h
Demo/Android/AICamera/app/paddle-android/lib/arm64-v8a/: BUILD.txt
Demo/Android/AICamera/app/paddle-android/lib/armeabi-v7a/: BUILD.txt
Demo/Android/AICamera/app/src/androidTest/java/com/paddlepaddle/aicamera/: ExampleInstrumentedTest.java
Demo/Android/AICamera/app/src/main/: AndroidManifest.xml
Demo/Android/AICamera/app/src/main/assets/models/: PUT_MODEL_FILE_HERE.txt
Demo/Android/AICamera/app/src/main/cpp/: common.h  image_converter.cpp  image_converter.h  image_recognizer_jni.cpp  native-lib.cpp  paddle_image_recognizer.cpp  paddle_image_recognizer.h
Demo/Android/AICamera/app/src/main/java/com/paddlepaddle/aicamera/: AutoFitTextureView.java  CopyModelUtils.java  ImageRecognizer.java  ImageUtils.java  MainActivity.java  SSDData.java  SSDLayerView.java  SSDModel.java  SettingsActivity.java  SettingsManager.java
Demo/Android/AICamera/app/src/main/java/com/paddlepaddle/pdcamera/: ImageRecognizer.java  MainActivity.java
Demo/Android/AICamera/app/src/main/res/layout/: activity_main.xml  settings.xml
Demo/Android/AICamera/app/src/test/java/com/paddlepaddle/aicamera/: ExampleUnitTest.java
Demo/Android/AICamera/gradle/wrapper/: gradle-wrapper.properties
Demo/iOS/AICamera/: README.md  README_cn.md
Demo/iOS/AICamera/AICamera/: AICamera-Bridging-Header.h  AppDelegate.swift  ImageRecognizer.swift  ImageRecognizerPaddleWrapper.h  ImageRecognizerPaddleWrapper.mm  Info.plist  SSDData.h  SSDData.m  SSDData.swift  SSDDrawLayer.swift  SSDModel.swift  SSDMultiboxLayer.swift  ViewController.swift  image.h  paddle_image_recognizer.cpp  paddle_image_recognizer.h
Demo/iOS/AICamera/AICamera.xcodeproj/: project.pbxproj
Demo/iOS/AICamera/AICamera/Base.lproj/: Main.storyboard
Demo/iOS/AICamera/PDCamera.xcodeproj/: project.pbxproj
Demo/iOS/AICamera/PDCamera.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Demo/linux/: CMakeLists.txt  FindFluid.cmake  FindPaddle.cmake  image_utils.cpp  image_utils.h  paddle_fluid_image_recognizer.cpp  paddle_fluid_image_recognizer.h  paddle_image_recognizer.cpp  paddle_image_recognizer.h
Demo/linux/image_classification/: imagenet_1000_labels.txt  main.cpp
Demo/linux/ssd/: README.md  main.cpp
benchmark/: README.md
benchmark/model/: mobilenet.py
benchmark/tool/C/: CMakeLists.txt  FindPaddle.cmake  README.md  README_cn.md  inference.cc
demo/linux/ssd/: CMakeLists.txt  FindOpenCV.cmake  README.md  image_reader.cpp  image_reader.h  image_utils.h  main.cpp  paddle_image_recognizer.cpp  paddle_image_recognizer.h
demo/linux/ssd/models/: merge_model.py  model_download.sh
demo/ssd/linux/: CMakeLists.txt  FindPaddle.cmake  README.md  main.cpp  paddle_image_recognizer.h
deployment/: build_for_minimum_size.md
deployment/merge_model/: README.md
deployment/model/merge_batch_normalization/demo/: mobilenet_without_bn.py  pre_generate_model.py
flowers102/: README.md
flowers102/mobilenet/: README.md
flowers102/mobilenet_pruning/: README.md  train.py
flowers102/resnet18/: README.md  train.py
flowers102/resnet18_pruning/: README.md  resnet_pruning.py  train.py
inference/C/: README.md
merge_batch_normalization/: README.md  merge_bn.py  pre_generate_model.py  verify.py
merge_batch_normalization/demo/: merge_batch_norm.py  mobilenet_with_bn.py  mobilenet_without_bn.py  verify.py
model_compression/flowers102/: README.md
model_compression/flowers102/mobilenet/: mobilenet.py  train.py
model_compression/flowers102/mobilenet_pruning/: README.md  mobilenet_pruning.py
model_compression/flowers102/resnet18/: resnet.py  train.py
model_compression/flowers102/resnet18_pruning/: train.py
model_compression/pruning/: README.md
model_compression/pruning/demo/: mobilenet_pruning.py  train.py
model_compression/pruning/moiblenet/: mobilenet_pruning.py  train.py
model_compression/pruning/resnet18/: resnet_pruning.py  train.py
model_compression/rounding/: README.md  Rounding .md
models/: README.md  mobilenet.py  resnet.py
models/mobilenet/: mobilenet.py  train.py
models/mobilenet_ssd_pascal/: README.md  infer.py  mobilenet_ssd_pascal.py
models/mobilenet_ssd_pascal/config/: pascal_voc_conf.py
models/resnet18/: resnet.py  train.py
tool/rounding/: README.md
tools/merge_config_parameters/: README.md
tools/merge_config_paramsters/: README.md  config.py  merge_config_and_params.py
